--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -8,35 +8,34 @@ and open the template in the editor.
     Author     : fall1600
 */
 
+.rectangle {
+  float: left;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 #root {
   width: 500px;
   height: 500px;
-  
   position: relative;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
-#divRight {
+.root {
+  position: relative;
+}
+
+.div-right {
   position: relative;
   float: right;
   width: 5%;
   height: 100%;
-  
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
-#divBottom {
+.div-bottom {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 5%;
-  
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
